# luddite

./: .gitignore  Makefile  README.md  codex_next_steps.md  pyproject.toml  requirements.txt
config/: google_sheets.example.yaml  google_sheets.yaml  rss_collection_allowlist.yaml  source_registry_recommendation_v0_9_3.yaml  sources.yaml
docs/: 00_project_charter.md  01_corpus_access_map.md  02_syuka_content_grammar.md  08_source_copyright_security_policy.md
luddite_docs/: README.md
scripts/: audit_syuka_policy_sources.py  run_jibi_manual_update.sh
specs/: anny_failure_mode_schema.json  anny_input_bundle_schema.json  anny_run_input_schema.json  anny_run_manifest_schema.json  anny_storyline_schema.json  article_schema.json  corpus_manifest_schema.json  deck_schema.json  evidence_cluster_schema.json  evidence_pack_schema.json  jibi_candidate_schema.json  piti_slide_spec_schema.json  story_seed_schema.json
tests/: test_anny_api_experiment_contract.py  test_anny_api_experiment_runner.py  test_anny_dry_run.py  test_anny_dry_run_comparison.py  test_anny_enriched_dry_run_comparison.py  test_anny_evidence_plan.py  test_anny_fact_check_review.py  test_anny_input_bundle_builder.py  test_anny_reconstruction_eval.py  test_anny_run_storyline.py  test_anny_slide_spec_experiment.py  test_anny_storyline_sample_renderer.py  test_article_importer.py  test_corpus_manifest.py  test_corpus_smoke.py  test_daily_digest_renderer.py  test_doctor.py  test_fetch_sheets.py  test_golden_fixtures.py  test_jibi_anny_handoff.py  test_jibi_article_body.py  test_jibi_board_copy_rewrite.py  test_jibi_board_scoring.py  test_jibi_board_support_search.py  test_jibi_board_triage.py  test_jibi_candidate_normalizer.py  test_jibi_cluster_candidates.py  test_jibi_scoring.py  (+43 more)
(+271 files in other folders)
