[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luddite"
version = "0.1.0"
description = "Corpus tooling and agent scaffolding for the Luddite project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.130",
    "google-auth>=2.30",
    "jsonschema>=4.23",
    "openpyxl>=3.1",
    "pydantic>=2.8",
    "python-pptx>=1.0",
    "rich>=13.7",
    "striprtf>=0.0.26",
    "tqdm>=4.66",
    "typer>=0.12",
]

[project.scripts]
luddite = "luddite.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not corpus'"
markers = [
    "corpus: tests that require local raw PPT/RTF/Sheet corpus files",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
